# IS_registration

./: pyproject.toml  requirements.txt
src/: database.py  main.py
src/auth/: controls.py  models.py  schemas.py
src/migration/: env.py
src/migration/versions/: 704d755a0088_initial_revision.py
src/services/: orm.py
